# g4eqdose

./: CMakeLists.txt  eqdose.cc  init_vis.mac  run.mac  vis.mac
data/: Electrons_Effective dose.txt  Helium Ions_Effective dose.txt  Negative Muons_Effective dose.txt  Negative Pions_Effective dose.txt  Neutrons_Effective dose.txt  Photons_Effective dose.txt  Photons_Kerma_Effective dose.txt  Positive Muons_Effective dose.txt  Positive Pions_Effective dose.txt  Positrons_Effective dose.txt  Protons_Effective dose.txt
include/: ActionInitialization.hh  ConvCoeff.hh  DetectorConstruction.hh  EventAction.hh  PSEquivalentDose3D.hh  PSEquivalntDose.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  ConvCoeff.cc  DetectorConstruction.cc  EventAction.cc  PSEquivalentDose3D.cc  PSEquivalntDose.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc
tests/: CMakeLists.txt  ConvCoeffTest.cc  Klapper_Effective dose.txt
